force-app/main/default/objects/ER_Account_to_Loop__c/ER_Account_to_Loop__c.object-meta.xml
<CustomObject>
    <label>Account to Loop</label>
    <nameField>
        <displayFormat>ATL-{0000}</displayFormat>
        <label>Account to Loop Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounts to Loops</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>