force-app/main/default/objects/ER_Account_to_Loop__c/fields/ER_Account__c.field-meta.xml
<CustomField>
    <fullName>ER_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts to Loops</relationshipLabel>
    <relationshipName>Accounts_to_Loops</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>