force-app/main/default/objects/ER_Account_to_Loop__c/fields/ER_Behaviour__c.field-meta.xml
<CustomField>
    <fullName>ER_Behaviour__c</fullName>
    <label>Behaviour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ER_Behaviour</valueSetName>
    </valueSet>
</CustomField>