force-app/main/default/objects/ER_Account_to_Loop__c/fields/ER_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ER_Business_Unit__c</fullName>
    <formula>TEXT( ER_Account__r.Owner.ER_Business_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>