force-app/main/default/objects/ER_Account_to_Loop__c/fields/ER_Loop__c.field-meta.xml
<CustomField>
    <fullName>ER_Loop__c</fullName>
    <label>Loop</label>
    <referenceTo>ER_Loop__c</referenceTo>
    <relationshipLabel>Accounts to Loops</relationshipLabel>
    <relationshipName>Accounts_to_Loops</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>